{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInputActions",
            "id": "7a499e7f-4588-45fc-ae5e-4b00c01f5b5e",
            "actions": [
                {
                    "name": "ExitButton",
                    "type": "Button",
                    "id": "499e1258-77df-4d44-89df-d1afa9603578",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "1a645858-f361-4b78-846d-f9a375a408a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f2f1c79-40f3-4c10-8c4c-2b3ed28c82ef",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28a702e5-f95e-4de8-a2d2-f8330f6b27e2",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}